# libfoxenunit

./: .travis.yml  README.md  meson.build
examples/: example.c
foxen/: unittest.h
test/: test_fail.c  test_success.c
